fixtures/k8s-overkill/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortlink
spec:
  type: ClusterIP
  selector:
    app: shortlink
  ports:
    - port: 80
      targetPort: 3000
